@@ -98,12 +98,14 @@ can pass command line options (such as ``--script-dir``) to
 Setuptools also supports deferring to an external launcher such as
 `pylauncher <https://bitbucket.org/pypa/pylauncher>`_ for launching scripts.
 Enable this experimental functionality by setting the
-``SETUPTOOLS_USE_PYLAUNCHER`` environment variable. Setuptools will then not
+``SETUPTOOLS_LAUNCHER`` environment variable to "natural". Setuptools will
+then not
 install its own launcher executable, but will install scripts as simple
-scripts with a .py (or .pyw) extension appended. If these extensions are
+scripts with a .pya (or .pyw) extension appended. If these extensions are
 associated with the pylauncher and listed in the PATHEXT environment variable,
 these scripts can then be invoked simply and directly just like any other
-executable.
+executable. This behavior may become default in a future version. To force
+the use of executable launchers, set ``SETUPTOOLS_LAUNCHER`` to "executable".
 
 
 Downloading and Installing a Package
